[project]
name = "emulator-bridge"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "SeshuTarapatla", email = "seshu.tarapatla@gmail.com" }
]
requires-python = ">=3.12"
dependencies = [
    "abdutils>=0.0.2",
    "adbutils>=2.12.0",
    "fastapi>=0.128.0",
    "pygetwindow>=0.0.9",
    "scalar-fastapi>=1.5.0",
    "uvicorn>=0.40.0",
]

[project.scripts]
emulator-bridge = "emulator_bridge.main:main"

[build-system]
requires = ["uv_build>=0.9.18,<0.10.0"]
build-backend = "uv_build"

[dependency-groups]
dev = [
    "ipykernel>=7.1.0",
]
